dist/book-club/Middleware.book-club-forward-proto.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: book-club-forward-proto
  namespace: book-club
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
