dist/book-club/Service.book-club.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-club
  namespace: book-club
spec:
  externalIPs: []
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: book-club-book-club-deployment-c8b4c8f8
  type: ClusterIP
