dist/book-club/Ingress.book-club.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: book-club
  namespace: book-club
spec:
  rules:
    - host: book-club.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: book-club
                port:
                  number: 3000
            path: /
            pathType: Prefix
    - host: book-club.whizkid.dev
      http:
        paths:
          - backend:
              service:
                name: book-club
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - book-club.cmdcentral.xyz
        - book-club.whizkid.dev
      secretName: book-club-tls
