dist/book-club/IngressRoute.book-club.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: book-club
  namespace: book-club
spec:
  routes:
    - kind: Rule
      match: Host(`book-club.cmdcentral.xyz`) || Host(`book-club.whizkid.dev`)
      middlewares:
        - name: book-club-forward-proto
          namespace: book-club
      services:
        - kind: Service
          name: book-club
          port: 3000
  tls:
    secretName: book-club-tls
